--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
   </head>
 
   <body>
-<div class="backgroundImage">
+    <div class="row text-center">
+
+      <!--Side Image-->
+
+    <div class="col-sm-1 col-md-2 books1"></div>
+
+    <!-- Main Content Area -->
+<div class="main col-sm-10 col-md-8">
 
 
 <!-- Title -->
-<div class="row text-center">
-  <div class="col-sm-2 col-md-3 col-lg-4"></div>
-  <div class="col-sm-8 col-md-6 col-lg-4">
-    <h1 class='font'>Wikipedia Viewer</h1>
+<div class="row justify-content-center">
+  <div class="col-10 col-sm-8">
+    <h1 class='title'>Wikipedia Viewer</h1>
   </div>
-  <div class="col-sm-2 col-md-3 col-lg-4"></div>
-
 </div>
 
 <!-- Random Article and button-->
-<div class="row text-center">
-  <div class="col-sm-2 col-md-3 col-lg-4"></div>
-  <div class="col-sm-8 col-md-6 col-lg-4">
+<div class="row justify-content-center text-center">
+  <div class="col-10 col-sm-8 col-lg-4">
     <h5 class='random' > <a class='link-unstyled' href='https://en.wikipedia.org/wiki/Special:Random' target='_blank'>Read </a>a random article...</h5>
   </div>
-  <div class="col-sm-2 col-md-3 col-lg-4"></div>
 </div>
 
 <!-- Search Box and button -->
@@ -40,26 +42,46 @@
   </div>
 </div>
 
+<!-- Initial space on page -->
+<div class="spacing"></div>
+
 
 <!-- Display Search Results. Repeat, etc.-->
 
-<div class="row article-generator">
-  <div class="col-sm-2 col-md-3"></div>
-  <div class="col-sm-8 col-md-6 article">
-    <h3 class='article-headline'>Lorem Ipsum</h3>
-    <p class='article-content'>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
-  </div>
-  <div class="col-sm-2 col-md-3"></div>
+<div class="row justify-content-center article-generator">
+    <div class="col-10 col-md-8 article">
+      <h4 class='article-headline'>Lorem Ipsum</h4>
+      <p class='article-content'>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+    </div>
 </div>
 
+<div class="row justify-content-center article-generator">
+    <div class="col-10 col-md-8 article">
+      <h4 class='article-headline'>Lorem Ipsum</h4>
+      <p class='article-content'>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+    </div>
+</div>
 
+<div class="row justify-content-center article-generator">
+    <div class="col-10 col-md-8 article">
+      <h4 class='article-headline'>Lorem Ipsum</h4>
+      <p class='article-content'>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+    </div>
+</div>
 
 <!-- Footer -->
 <div class="row text-center">
-  <footer>
-    Coded by <a class='link-unstyled' href='https://github.com/amyngb' target = "_blank"> Amy Bedinghaus </a>
-  </footer>
+  <div class='col-xs-12'>
+    <footer> Coded by <a class='link-unstyled' href='https://github.com/amyngb' target = "_blank"> Amy Bedinghaus </a>
+    </footer>
+  </div>
 </div>
+
+</div>
+
+<!--Side Image-->
+<div class="col-sm-1 col-md-2 books2"></div>
+
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
