--- a/index.html
+++ b/index.html
@@ -27,12 +27,21 @@
   </div>
 </div>
 
+
+<!-- Logo -->
+<div class="row justify-content-center">
+  <figure class="col-4 col-lg-3">
+    <a href="https://en.wikipedia.org/wiki/Special:Random" target="_blank"><img class="logo" src="https://upload.wikimedia.org/wikipedia/en/7/70/Wikipedia-logo-crnagora.png" alt="Wikipedia Logo"> </a>
+    <figcaption> <a class="link-unstyled" href="https://en.wikipedia.org/wiki/Special:Random">Read </a> a random article...</figcaption>
+  </figure>
+</div>
+
 <!-- Random Article and button-->
-<div class="row justify-content-center text-center">
+<!-- <div class="row justify-content-center text-center">
   <div class="col-10 col-sm-8 col-lg-4">
     <h5 class='random' > <a class='link-unstyled' href='https://en.wikipedia.org/wiki/Special:Random' target='_blank'>Read </a>a random article...</h5>
   </div>
-</div>
+</div> -->
 
 <!-- Search Box and button -->
 <div class="row text-center">
