--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 <!-- Search Box and button -->
 <div class="row text-center">
   <div class="col-sm-12">
-    <input type="text" class='searchbox' placeholder="...or search here" />
-    <button type="button" >Go</button>
+    <input type="text" id='keyword' class='searchbox' placeholder="...or search here" />
+    <button type="button" id='searchButton' >Go</button>
   </div>
 </div>
 
@@ -57,25 +57,11 @@
 
 <!-- Display Search Results. Repeat, etc.-->
 
-<div class="row justify-content-center article-generator">
-    <div class="col-10 col-md-8 article">
-      <h4 class='article-headline'>Lorem Ipsum</h4>
-      <p class='article-content'>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
-    </div>
-</div>
-
-<div class="row justify-content-center article-generator">
-    <div class="col-10 col-md-8 article">
-      <h4 class='article-headline'>Lorem Ipsum</h4>
-      <p class='article-content'>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
-    </div>
-</div>
-
-<div class="row justify-content-center article-generator">
-    <div class="col-10 col-md-8 article">
-      <h4 class='article-headline'>Lorem Ipsum</h4>
-      <p class='article-content'>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
-    </div>
+<div class="row justify-content-center" id ="article-generator">
+    <!-- <div class="col-10 col-md-8 article">
+      <h4 class='article-headline'></h4>
+      <p class='article-content'></p>
+    </div> -->
 </div>
 
 <!-- Footer -->
