Toggle initial page spacing

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </div> -->
 
 <!-- Search Box and button -->
-<div class="row text-center">
+<div class="row text-center" id= "aftersearchbox">
   <div class="col-sm-12">
     <input type="text" id='keyword' class='searchbox' placeholder="...or search here" />
     <button type="button" id='searchButton' >Go</button>
@@ -52,12 +52,12 @@
 </div>
 
 <!-- Initial space on page -->
-<div class="spacing"></div>
+<!-- <div id="spacing"></div> -->
 
 
 <!-- Display Search Results. Repeat, etc.-->
 
-<div class="row justify-content-center" id ="article-generator"> 
+<div class="row justify-content-center" id ="article-generator">
     <!-- <div class="col-10 col-md-8 article">
       <h4 class='article-headline'></h4>
       <p class='article-content'></p>
