Keydown/keyup css

--- a/index.html
+++ b/index.html
@@ -58,10 +58,8 @@
 <!-- Display Search Results. Repeat, etc.-->
 
 <div class="row justify-content-center" id ="article-generator">
-    <!-- <div class="col-10 col-md-8 article">
-      <h4 class='article-headline'></h4>
-      <p class='article-content'></p>
-    </div> -->
+    <!-- This will be generated...: -->
+    <!-- <div class="col-10 col-md-8 article"><a  class= "link-unstyled-article" target = "_blank" href=' + link + '><h4 class="article-headline">' + headline + '</h4> <p class="article-content">"' + content + '"</p> </a></div>' -->
 </div>
 
 <!-- Footer -->
@@ -83,5 +81,5 @@
 
 <script type="text/javascript" src = "wikipedia.js"></script>
 
-  </body>
+</body>
 </html>
